feat(oa-api): Healtcheck endpoint
